# ocaml-variorum

./: .gitmodules  LICENSE  README.md  dune-project  variorum.opam  variorum.opam.template
example/: dune  main.ml
src/c/: dune  function_description.ml  type_description.ml
src/c/hwloc/: dune
src/c/jansson/: dune
src/lib/: dune  variorum.dummy.ml  variorum.ml  variorum.mli  variorum.real.ml
