(rule
 (target hwloc.loc)
 (action
  (with-stdout-to
   hwloc.loc
   (run dirname %{lib:hwloc:../stublibs/dllhwloc.so}))))

(rule
 (target jansson.loc)
 (action
  (with-stdout-to
   jansson.loc
   (run dirname %{lib:jansson:../stublibs/dlljansson.so}))))

(library
 (name variorum_c)
 (public_name variorum.c)
 (foreign_archives variorum)
 (flags
  (:standard -w -9-27))
 (ctypes
  (external_library_name variorum)
  (build_flags_resolver
   (vendored
    (c_flags :standard -I src/c -I .)
    (c_library_flags
     :standard
     -L{%read-lines:hwloc.loc}
     -l:dllhwloc.so
     -L%{read-lines:jansson.loc}
     -l:dlljansson.so)))
  (deps variorum.h variorum_error.h)
  (headers
   (include "variorum.h" "variorum_error.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))

; There's probably a nicer way to do this...

(rule
  (target architecture.txt)
  (enabled_if (or (= %{architecture} amd64) (= %{architecture} amd)))
  (action
    (with-stdout-to %{target} (run echo "-DVARIORUM_WITH_INTEL=ON"))))

(rule
  (target architecture.txt)
  (enabled_if (or (= %{architecture} arm64) (= %{architecture} arm)))
  (action
    (with-stdout-to %{target} (run echo " -DVARIORUM_WITH_ARM=ON -DVARIORUM_WITH_INTEL=OFF "))))

(rule
  (target architecture.txt)
  (enabled_if (= %{architecture} s390x)) ; Is this right?
  (action
    (with-stdout-to %{target} (run echo " -DVARIORUM_WITH_IBM=ON -DVARIORUM_WITH_INTEL=OFF "))))

(rule
  (target architecture.txt)
  (enabled_if (= %{architecture} i386)) ; Is this right?
  (action
    (with-stdout-to %{target} (run echo " -DVARIORUM_WITH_INTEL=ON "))))

(rule
 (deps
  hwloc/libhwloc.a
  architecture.txt
  %{project_root}/src/c/hwloc/lib/libhwloc.so
  %{project_root}/src/c/jansson/lib/libjansson.so
  (source_tree %{project_root}/src/c/hwloc)
  %{project_root}/src/c/jansson/jansson.h
  (source_tree %{project_root}/vendor/variorum))
 (targets dllvariorum.so libvariorum.a variorum.h variorum_error.h)
 (action
  (no-infer
   (progn
    (chdir
     %{project_root}/vendor/variorum
     (progn
      (run
       mkdir
       -p
       build
       install
       src/variorum/hwloc
       src/variorum/hwloc/autogen)
      (chdir
       %{project_root}/vendor/variorum/build
       (progn
        (copy %{project_root}/src/c/hwloc/hwloc.h ../src/variorum/hwloc.h)
        (copy
         %{project_root}/src/c/hwloc/rename.h
         ../src/variorum/hwloc/rename.h)
        (copy
         %{project_root}/src/c/hwloc/bitmap.h
         ../src/variorum/hwloc/bitmap.h)
        (copy
         %{project_root}/src/c/hwloc/inlines.h
         ../src/variorum/hwloc/inlines.h)
        (copy
         %{project_root}/src/c/hwloc/diff.h
         ../src/variorum/hwloc/diff.h)
        (copy
         %{project_root}/src/c/hwloc/helper.h
         ../src/variorum/hwloc/helper.h)
        (copy
         %{project_root}/src/c/hwloc/deprecated.h
         ../src/variorum/hwloc/deprecated.h)
        (copy
         %{project_root}/src/c/hwloc/config.h
         ../src/variorum/hwloc/autogen/config.h)
        (copy
         %{project_root}/src/c/jansson/jansson.h
         ../src/variorum/jansson.h)
        (copy
         %{project_root}/src/c/jansson/jansson.h
         %{project_root}/src/c/jansson.h)
        (copy
         %{project_root}/src/c/jansson/jansson_config.h
         %{project_root}/src/c/jansson_config.h)
        (copy
         %{project_root}/src/c/jansson/jansson_config.h
         ../src/variorum/jansson_config.h)
        (run
         cmake
         -DCMAKE_INSTALL_PREFIX=../install
         -DENABLE_FORTRAN=OFF
         %{read-lines:architecture.txt}
         -DHWLOC_DIR=%{project_root}/src/c/hwloc
         -DJANSSON_DIR=%{project_root}/src/c/jansson
         -DBUILD_TESTS=OFF
         -DBUILD_DOCS=OFF
         -DBUILD_SHARED_LIBS=OFF
         ../src)
        (setenv
         CFLAGS
         "%{ocaml-config:ocamlc_cflags}"
         (run make -j))
        (run make install)
        (copy
         %{project_root}/vendor/variorum/install/lib/libvariorum.a
         %{project_root}/src/c/libvariorum.a)
        (run
         cmake
         -DCMAKE_INSTALL_PREFIX=../install
         -DENABLE_FORTRAN=OFF
         %{read-lines:architecture.txt}
         -DHWLOC_DIR=%{project_root}/src/c/hwloc
         -DJANSSON_DIR=%{project_root}/src/c/jansson
         -DBUILD_TESTS=OFF
         -DBUILD_DOCS=OFF
         -DBUILD_SHARED_LIBS=ON
         ../src)
        (setenv
         CFLAGS
         "%{ocaml-config:ocamlc_cflags}"
         (run make -j))
        (run make install)
        (copy
         %{project_root}/vendor/variorum/install/lib/libvariorum.so
         %{project_root}/src/c/dllvariorum.so)))))
    (copy %{project_root}/vendor/variorum/src/variorum/variorum.h variorum.h)
    (copy
     %{project_root}/vendor/variorum/src/variorum/variorum_error.h
     variorum_error.h)))))
